# OpenFHE-Benchmarks

./: CMakeLists.txt  README.md  bench-add-mul-unencrypted.cpp  bench-add-mul.cpp  bench-boots.cpp  utils.cpp  utils.h
